redid the skullstripping qsub files

--- a/code/11_CreateTestImages.ipynb
+++ b/code/11_CreateTestImages.ipynb
@@ -2,9 +2,24 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/data/svcf/software/anaconda3/envs/fastai/lib/python3.7/site-packages/dicom/__init__.py:53: UserWarning: \n",
+      "This code is using an older version of pydicom, which is no longer \n",
+      "maintained as of Jan 2017.  You can access the new pydicom features and API \n",
+      "by installing `pydicom` from PyPI.\n",
+      "See 'Transitioning to pydicom 1.x' section at pydicom.readthedocs.org \n",
+      "for more information.\n",
+      "\n",
+      "  warnings.warn(msg)\n"
+     ]
+    }
+   ],
    "source": [
     "import os \n",
     "import glob\n",
@@ -762,6 +777,81 @@
    "outputs": [],
    "source": [
     "adc_dict = {row['patient_id']: row['aligned_dti'] for idx, row in aligned_dti.iterrows()}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['dti_seg_map.csv',\n",
+       " 'skullstrip_lgg.txt',\n",
+       " '06_map_segmented_exams_to_exams_with_DTI.ipynb',\n",
+       " 'register_lggs.txt_1.csh',\n",
+       " '11_CreateTestImages.ipynb',\n",
+       " '03_Create_Datalist.ipynb',\n",
+       " 'premask_condensed.txt',\n",
+       " 'segmentation_mapping.json',\n",
+       " 'skullstrip_lgg.txt_1.csh',\n",
+       " 'process_DTI_brain',\n",
+       " '01_Register_LGG_Niftis_Using_BrainsFit.ipynb',\n",
+       " 'skullstrip_condensed_stripOnly.txt',\n",
+       " 'register_GBMs.txt_1.csh',\n",
+       " '.ipynb_checkpoints',\n",
+       " 'src',\n",
+       " '05_findDiffusionSequences.ipynb',\n",
+       " 'register_GBMs.txt',\n",
+       " 'premask_gbms.txt',\n",
+       " 'segmentation_mappings.json',\n",
+       " '00_check_nifti_sizes.ipynb',\n",
+       " '02_SkullStripCondensed.ipynb',\n",
+       " '08_DTI_int2_to_nifti.ipynb',\n",
+       " 'final_dti_subset.csv',\n",
+       " 'premask_lggs.txt',\n",
+       " 'skullstrip_gbms.txt',\n",
+       " 'usable_patient_gbm.csv',\n",
+       " '07_processDTI.ipynb',\n",
+       " 'register_ADC.txt',\n",
+       " 'skullstrip_condensed.txt_1.csh',\n",
+       " 'dti_dict.json',\n",
+       " 'register_ADC.txt_1.csh',\n",
+       " 'skullstrip_condensed.txt',\n",
+       " 'register_lggs.txt',\n",
+       " '10_CreateRGBImages_munge.ipynb',\n",
+       " 'premask_gbms.txt_1.csh',\n",
+       " '04_mapping_segmentations_to_patientID_VisuallyVerify.ipynb',\n",
+       " 'premask_lggs.txt_1.csh',\n",
+       " '01_Register_GBM_Niftis_Using_BrainsFit.ipynb',\n",
+       " 'junk',\n",
+       " 'aligned_dti.csv',\n",
+       " 'premask_condensed.txt_1.csh',\n",
+       " 'skullstrip_condensed_stripOnly.txt_1.csh',\n",
+       " '09_RegisterDTI.ipynb',\n",
+       " 'skullstrip_gbms.txt_1.csh',\n",
+       " '02_SkullStripGBMs.ipynb',\n",
+       " '02_SkullStripLGGs.ipynb',\n",
+       " 'usable_patient_lgg.csv']"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "os.listdir()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "aligned_dti.to_csv('aligned_dti_with_labels.csv', index = False)"
    ]
   },
   {
