--- a/code/08_DTI_int2_to_nifti.ipynb
+++ b/code/08_DTI_int2_to_nifti.ipynb
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -81,44 +81,44 @@
        "      <td>['400-DTI_2.6mm_WH-19253.nii.gz', '4-DTI_2.6mm...</td>\n",
        "      <td>08-23-1995-MRI_BRAIN_WWO_CONTRAST-78436</td>\n",
        "      <td>TCGA-DU-5853</td>\n",
-       "      <td>11-AX_T1_POST_GD_FLAIR-81300a_n</td>\n",
+       "      <td>6-AXIAL_FLAIR-84159</td>\n",
        "      <td>4-DTI_2.6mm_WH-81596</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>TCGA-LGG-nifti</td>\n",
-       "      <td>['601-DTI_ASSET-84919.nii.gz', '600-DTI_ASSET-...</td>\n",
+       "      <td>['601-DTI_ASSET-84919a.nii.gz', '601-DTI_ASSET...</td>\n",
        "      <td>06-18-1989-MRI_BRAIN_WWO_CONTRAS-16160</td>\n",
        "      <td>TCGA-DU-7015</td>\n",
-       "      <td>10-AX_T1_POST_GD_FLAIR-19430a_n</td>\n",
+       "      <td>8-AXIAL_FLAIR-42112</td>\n",
        "      <td>6-DTI_ASSET-60836</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>TCGA-LGG-nifti</td>\n",
-       "      <td>['501-DTI_2.6mm_WH-21034.nii.gz', '5-DTI_2.6mm...</td>\n",
-       "      <td>01-11-1997-MRI_BRAIN_WWO_CONTRAST-98366</td>\n",
-       "      <td>TCGA-DU-8164</td>\n",
-       "      <td>10-AX_T1_POST_GD_FLAIR-02819a_n</td>\n",
-       "      <td>5-DTI_2.6mm_WH-89883</td>\n",
+       "      <td>['5-DTI_DIFF-35088a.nii.gz', '5-DTI_DIFF-35088...</td>\n",
+       "      <td>02-12-2002-NR_MRI_BRAIN_WWO-92800</td>\n",
+       "      <td>TCGA-FG-A4MT</td>\n",
+       "      <td>3-FLAIR_AXIALS-02285</td>\n",
+       "      <td>5-DTI_DIFF-35088a</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>TCGA-LGG-nifti</td>\n",
-       "      <td>['6-DTI_2.6mm_WH-60904.nii.gz', '601-DTI_2.6mm...</td>\n",
-       "      <td>11-19-1996-MRI_BRAIN_WWO_CONTRAST-27038</td>\n",
-       "      <td>TCGA-DU-8163</td>\n",
-       "      <td>12-AX_T1_POST_GD_FLAIR-07772a_n</td>\n",
-       "      <td>6-DTI_2.6mm_WH-60904</td>\n",
+       "      <td>['501-DTI_2.6mm_WH-21034.nii.gz', '500-DTI_2.6...</td>\n",
+       "      <td>01-11-1997-MRI_BRAIN_WWO_CONTRAST-98366</td>\n",
+       "      <td>TCGA-DU-8164</td>\n",
+       "      <td>4-AXIAL_FLAIR-03012</td>\n",
+       "      <td>5-DTI_2.6mm_WH-89883</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>TCGA-LGG-nifti</td>\n",
-       "      <td>['1100-DTI_ASSET-99068.nii.gz', '1101-DTI_ASSE...</td>\n",
-       "      <td>12-20-1991-MRI_BRAIN_WWO_CONTRAST-98852</td>\n",
-       "      <td>TCGA-DU-7018</td>\n",
-       "      <td>13-AX_T1_POST_GD_FLAIR-47091a_n</td>\n",
-       "      <td>11-DTI_ASSET-81799</td>\n",
+       "      <td>['4-DTI_DIFF-06660.nii.gz', '4-DTI_DIFF-06660a...</td>\n",
+       "      <td>05-11-2001-NR_MRI_BRAIN_WWO-55981</td>\n",
+       "      <td>TCGA-FG-5964</td>\n",
+       "      <td>5-MRHG_FLAIR_AX-21158</td>\n",
+       "      <td>4-DTI_DIFF-06660</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -127,27 +127,27 @@
       "text/plain": [
        "           cohort                                                dti  \\\n",
        "0  TCGA-LGG-nifti  ['400-DTI_2.6mm_WH-19253.nii.gz', '4-DTI_2.6mm...   \n",
-       "1  TCGA-LGG-nifti  ['601-DTI_ASSET-84919.nii.gz', '600-DTI_ASSET-...   \n",
-       "2  TCGA-LGG-nifti  ['501-DTI_2.6mm_WH-21034.nii.gz', '5-DTI_2.6mm...   \n",
-       "3  TCGA-LGG-nifti  ['6-DTI_2.6mm_WH-60904.nii.gz', '601-DTI_2.6mm...   \n",
-       "4  TCGA-LGG-nifti  ['1100-DTI_ASSET-99068.nii.gz', '1101-DTI_ASSE...   \n",
+       "1  TCGA-LGG-nifti  ['601-DTI_ASSET-84919a.nii.gz', '601-DTI_ASSET...   \n",
+       "2  TCGA-LGG-nifti  ['5-DTI_DIFF-35088a.nii.gz', '5-DTI_DIFF-35088...   \n",
+       "3  TCGA-LGG-nifti  ['501-DTI_2.6mm_WH-21034.nii.gz', '500-DTI_2.6...   \n",
+       "4  TCGA-LGG-nifti  ['4-DTI_DIFF-06660.nii.gz', '4-DTI_DIFF-06660a...   \n",
        "\n",
        "                                      exam    patient_id  \\\n",
        "0  08-23-1995-MRI_BRAIN_WWO_CONTRAST-78436  TCGA-DU-5853   \n",
        "1   06-18-1989-MRI_BRAIN_WWO_CONTRAS-16160  TCGA-DU-7015   \n",
-       "2  01-11-1997-MRI_BRAIN_WWO_CONTRAST-98366  TCGA-DU-8164   \n",
-       "3  11-19-1996-MRI_BRAIN_WWO_CONTRAST-27038  TCGA-DU-8163   \n",
-       "4  12-20-1991-MRI_BRAIN_WWO_CONTRAST-98852  TCGA-DU-7018   \n",
+       "2        02-12-2002-NR_MRI_BRAIN_WWO-92800  TCGA-FG-A4MT   \n",
+       "3  01-11-1997-MRI_BRAIN_WWO_CONTRAST-98366  TCGA-DU-8164   \n",
+       "4        05-11-2001-NR_MRI_BRAIN_WWO-55981  TCGA-FG-5964   \n",
        "\n",
-       "                 segmentation_name       dti_series_name  \n",
-       "0  11-AX_T1_POST_GD_FLAIR-81300a_n  4-DTI_2.6mm_WH-81596  \n",
-       "1  10-AX_T1_POST_GD_FLAIR-19430a_n     6-DTI_ASSET-60836  \n",
-       "2  10-AX_T1_POST_GD_FLAIR-02819a_n  5-DTI_2.6mm_WH-89883  \n",
-       "3  12-AX_T1_POST_GD_FLAIR-07772a_n  6-DTI_2.6mm_WH-60904  \n",
-       "4  13-AX_T1_POST_GD_FLAIR-47091a_n    11-DTI_ASSET-81799  "
+       "       segmentation_name       dti_series_name  \n",
+       "0    6-AXIAL_FLAIR-84159  4-DTI_2.6mm_WH-81596  \n",
+       "1    8-AXIAL_FLAIR-42112     6-DTI_ASSET-60836  \n",
+       "2   3-FLAIR_AXIALS-02285     5-DTI_DIFF-35088a  \n",
+       "3    4-AXIAL_FLAIR-03012  5-DTI_2.6mm_WH-89883  \n",
+       "4  5-MRHG_FLAIR_AX-21158      4-DTI_DIFF-06660  "
       ]
      },
-     "execution_count": 89,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -158,7 +158,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(58, 6)"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "final_dti_subset.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -177,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -186,7 +206,7 @@
        "26"
       ]
      },
-     "execution_count": 100,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -197,7 +217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -231,7 +251,7 @@
        " 'TCGA-06-1806']"
       ]
      },
-     "execution_count": 101,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -256,7 +276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -265,7 +285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -274,7 +294,7 @@
        "(26, 6)"
       ]
      },
-     "execution_count": 103,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -285,7 +305,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -319,49 +339,49 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>21</th>\n",
+       "      <th>26</th>\n",
        "      <td>TCGA-LGG-nifti</td>\n",
-       "      <td>['701-DTI_ASSET-28393.nii.gz', '700-DTI_ASSET-...</td>\n",
+       "      <td>['701-DTI_ASSET-28393.nii.gz', '701-DTI_ASSET-...</td>\n",
        "      <td>08-14-1991-MRI_BRAIN_WWO_CONTRAST-33968</td>\n",
        "      <td>TCGA-DU-7300</td>\n",
-       "      <td>10-AX_T1_POST_GD_FLAIR-17011a_n</td>\n",
-       "      <td>7-DTI_ASSET-26847</td>\n",
+       "      <td>5-AXIAL_FLAIR-16329</td>\n",
+       "      <td>7-DTI_ASSET-26847a</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>22</th>\n",
+       "      <th>28</th>\n",
        "      <td>TCGA-LGG-nifti</td>\n",
-       "      <td>['4-DTI_2.6mm_WH-31825.nii.gz', '401-DTI_2.6mm...</td>\n",
+       "      <td>['400-DTI_2.6mm_WH-23321a.nii.gz', '4-DTI_2.6m...</td>\n",
        "      <td>03-22-1997-MRI_BRAIN_WWO_CONTRAST-94974</td>\n",
        "      <td>TCGA-DU-8166</td>\n",
-       "      <td>12-AX_T1_POST_GD_FLAIR-47718a_n</td>\n",
-       "      <td>4-DTI_2.6mm_WH-31825</td>\n",
+       "      <td>7-AXIAL_FLAIR-20431</td>\n",
+       "      <td>4-DTI_2.6mm_WH-31825a</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>23</th>\n",
+       "      <th>29</th>\n",
        "      <td>TCGA-LGG-nifti</td>\n",
-       "      <td>['8-DTI_2.6mm_WH-90495.nii.gz', '802-DTI_2.6mm...</td>\n",
+       "      <td>['8-DTI_2.6mm_WH-90495.nii.gz', 'TCGA-DU-A5TP_...</td>\n",
        "      <td>06-14-1997-MRI_BRAIN_WWO_CONTRAST-14542</td>\n",
        "      <td>TCGA-DU-A5TP</td>\n",
-       "      <td>10-AX_T1_POST_GD_FLAIR-90264a_n</td>\n",
+       "      <td>6-AXIAL_FLAIR-07910</td>\n",
        "      <td>8-DTI_2.6mm_WH-90495</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>24</th>\n",
+       "      <th>30</th>\n",
        "      <td>TCGA-LGG-nifti</td>\n",
-       "      <td>['7-DTI_ASSET-72031.nii.gz', '702-DTI_ASSET-13...</td>\n",
+       "      <td>['7-DTI_ASSET-72031.nii.gz', '7-DTI_ASSET-7203...</td>\n",
        "      <td>04-17-1991-MRI_BRAIN_WWO_CONTRAST-84114</td>\n",
        "      <td>TCGA-DU-7299</td>\n",
-       "      <td>10-AX_T1_POST_GD_FLAIR-49564a_n</td>\n",
+       "      <td>5-AXIAL_FLAIR-03289</td>\n",
        "      <td>7-DTI_ASSET-72031</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>41</th>\n",
+       "      <th>49</th>\n",
        "      <td>TCGA-GBM-nifti</td>\n",
-       "      <td>['402-DTI_2.6mm_WH-04206.nii.gz', '400-DTI_2.6...</td>\n",
+       "      <td>['402-DTI_2.6mm_WH-04206.nii.gz', '4-DTI_2.6mm...</td>\n",
        "      <td>02-27-2008-MRI_BRAIN_WWO_CONTRAST-78379</td>\n",
        "      <td>TCGA-06-1806</td>\n",
-       "      <td>11-AX_T1_POST_GD_FLAIR-87636a_n</td>\n",
-       "      <td>4-DTI_2.6mm_WH-63977</td>\n",
+       "      <td>5-AXIAL_FLAIR-78218</td>\n",
+       "      <td>4-DTI_2.6mm_WH-63977a</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -369,28 +389,28 @@
       ],
       "text/plain": [
        "            cohort                                                dti  \\\n",
-       "21  TCGA-LGG-nifti  ['701-DTI_ASSET-28393.nii.gz', '700-DTI_ASSET-...   \n",
-       "22  TCGA-LGG-nifti  ['4-DTI_2.6mm_WH-31825.nii.gz', '401-DTI_2.6mm...   \n",
-       "23  TCGA-LGG-nifti  ['8-DTI_2.6mm_WH-90495.nii.gz', '802-DTI_2.6mm...   \n",
-       "24  TCGA-LGG-nifti  ['7-DTI_ASSET-72031.nii.gz', '702-DTI_ASSET-13...   \n",
-       "41  TCGA-GBM-nifti  ['402-DTI_2.6mm_WH-04206.nii.gz', '400-DTI_2.6...   \n",
+       "26  TCGA-LGG-nifti  ['701-DTI_ASSET-28393.nii.gz', '701-DTI_ASSET-...   \n",
+       "28  TCGA-LGG-nifti  ['400-DTI_2.6mm_WH-23321a.nii.gz', '4-DTI_2.6m...   \n",
+       "29  TCGA-LGG-nifti  ['8-DTI_2.6mm_WH-90495.nii.gz', 'TCGA-DU-A5TP_...   \n",
+       "30  TCGA-LGG-nifti  ['7-DTI_ASSET-72031.nii.gz', '7-DTI_ASSET-7203...   \n",
+       "49  TCGA-GBM-nifti  ['402-DTI_2.6mm_WH-04206.nii.gz', '4-DTI_2.6mm...   \n",
        "\n",
        "                                       exam    patient_id  \\\n",
-       "21  08-14-1991-MRI_BRAIN_WWO_CONTRAST-33968  TCGA-DU-7300   \n",
-       "22  03-22-1997-MRI_BRAIN_WWO_CONTRAST-94974  TCGA-DU-8166   \n",
-       "23  06-14-1997-MRI_BRAIN_WWO_CONTRAST-14542  TCGA-DU-A5TP   \n",
-       "24  04-17-1991-MRI_BRAIN_WWO_CONTRAST-84114  TCGA-DU-7299   \n",
-       "41  02-27-2008-MRI_BRAIN_WWO_CONTRAST-78379  TCGA-06-1806   \n",
+       "26  08-14-1991-MRI_BRAIN_WWO_CONTRAST-33968  TCGA-DU-7300   \n",
+       "28  03-22-1997-MRI_BRAIN_WWO_CONTRAST-94974  TCGA-DU-8166   \n",
+       "29  06-14-1997-MRI_BRAIN_WWO_CONTRAST-14542  TCGA-DU-A5TP   \n",
+       "30  04-17-1991-MRI_BRAIN_WWO_CONTRAST-84114  TCGA-DU-7299   \n",
+       "49  02-27-2008-MRI_BRAIN_WWO_CONTRAST-78379  TCGA-06-1806   \n",
        "\n",
-       "                  segmentation_name       dti_series_name  \n",
-       "21  10-AX_T1_POST_GD_FLAIR-17011a_n     7-DTI_ASSET-26847  \n",
-       "22  12-AX_T1_POST_GD_FLAIR-47718a_n  4-DTI_2.6mm_WH-31825  \n",
-       "23  10-AX_T1_POST_GD_FLAIR-90264a_n  8-DTI_2.6mm_WH-90495  \n",
-       "24  10-AX_T1_POST_GD_FLAIR-49564a_n     7-DTI_ASSET-72031  \n",
-       "41  11-AX_T1_POST_GD_FLAIR-87636a_n  4-DTI_2.6mm_WH-63977  "
+       "      segmentation_name        dti_series_name  \n",
+       "26  5-AXIAL_FLAIR-16329     7-DTI_ASSET-26847a  \n",
+       "28  7-AXIAL_FLAIR-20431  4-DTI_2.6mm_WH-31825a  \n",
+       "29  6-AXIAL_FLAIR-07910   8-DTI_2.6mm_WH-90495  \n",
+       "30  5-AXIAL_FLAIR-03289      7-DTI_ASSET-72031  \n",
+       "49  5-AXIAL_FLAIR-78218  4-DTI_2.6mm_WH-63977a  "
       ]
      },
-     "execution_count": 104,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -401,7 +421,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -528,30 +548,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "TCGA-06-0644 []\n",
-      "TCGA-06-5412 []\n",
-      "TCGA-06-0241 []\n",
-      "TCGA-06-0878 []\n",
-      "TCGA-06-0149 []\n",
-      "TCGA-06-0143 []\n",
-      "TCGA-06-0648 []\n",
-      "TCGA-19-0955 ['7-MRHG_DIFFADC-81753', '7-MRHG_DIFFADC-81109']\n",
-      "TCGA-06-1802 []\n",
-      "TCGA-06-0139 []\n",
-      "TCGA-06-5413 []\n",
-      "TCGA-06-0133 ['500-Average_DC-93686']\n",
-      "TCGA-06-0178 ['104-ADC_Slope-55332']\n",
-      "TCGA-06-0646 []\n",
-      "TCGA-06-0188 ['500-Average_DC-59999']\n",
-      "TCGA-19-2624 ['7-DTIADC-43987', '5-MRHR_DIFF_IPATADC-07518']\n",
-      "TCGA-08-0360 []\n"
+     "ename": "FileNotFoundError",
+     "evalue": "[Errno 2] No such file or directory: '/working/lupolab/julia/tcia_analysis/datasets/TCGA-GBM/TCGA-FG-A4MT/02-12-2002-NR_MRI_BRAIN_WWO-92800'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-30-6fb32f9338ba>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mpatient\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mmissing_diffusion\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m     \u001b[0mexam\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mstr\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfinal_dti_subset\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mloc\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mfinal_dti_subset\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpatient_id\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0mpatient\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mexam\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msplit\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m     \u001b[0mseries_in_exam\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mos\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlistdir\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'/working/lupolab/julia/tcia_analysis/datasets/TCGA-GBM/'\u001b[0m\u001b[0;34m+\u001b[0m\u001b[0mpatient\u001b[0m\u001b[0;34m+\u001b[0m\u001b[0;34m'/'\u001b[0m\u001b[0;34m+\u001b[0m\u001b[0mexam\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      4\u001b[0m     \u001b[0madc\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0mx\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mx\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mseries_in_exam\u001b[0m \u001b[0;32mif\u001b[0m \u001b[0;34m'adc'\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mx\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlower\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mor\u001b[0m \u001b[0;34m'apparent'\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mx\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlower\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mor\u001b[0m \u001b[0;34m'average'\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mx\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlower\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m     \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mpatient\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0madc\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: '/working/lupolab/julia/tcia_analysis/datasets/TCGA-GBM/TCGA-FG-A4MT/02-12-2002-NR_MRI_BRAIN_WWO-92800'"
      ]
     }
    ],
@@ -614,18 +622,6 @@
    "display_name": "Fastai SVCF",
    "language": "python",
    "name": "fastai"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.7.2"
   }
  },
  "nbformat": 4,
