added in t1c segmentation

--- a/code_updated/01_image_registration.ipynb
+++ b/code_updated/01_image_registration.ipynb
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -88,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -97,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -106,7 +106,7 @@
        "(395, 2)"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1205,7 +1205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1214,7 +1214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1223,7 +1223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1232,6 +1232,8 @@
     "    dicom_contrast = row['contrast']\n",
     "    if 'apparent' in image_description or 'coeff' in image_description or 'adc' in image_description or 'average' in image_description or 'avg' in image_description:\n",
     "        df.at[idx, 'contrast_label'] = 'ADC'\n",
+    "    elif 'loc' in image_description: \n",
+    "        df.at[idx, 'contrast_label'] = \"LOCALIZER\"\n",
     "    elif 't1' in image_description or 'spgr' in image_description: \n",
     "        if (dicom_contrast == 1 or 'post' in image_description) and 'pre' not in image_description: \n",
     "            df.at[idx, 'contrast_label'] = 'T1C'\n",
@@ -1272,21 +1274,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "T1C          1428\n",
-       "T1           1265\n",
-       "T2            891\n",
+       "T1C          1415\n",
+       "T1           1258\n",
+       "T2            890\n",
        "OTHER         782\n",
-       "SCOUT         630\n",
        "DWI           625\n",
        "T2_FLAIR      595\n",
        "DTI           540\n",
+       "LOCALIZER     375\n",
        "ADC           331\n",
+       "SCOUT         276\n",
        "PERFUSION     243\n",
        "FA             53\n",
        "rBF            52\n",
@@ -1296,7 +1299,7 @@
        "Name: contrast_label, dtype: int64"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1307,7 +1310,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['patient_id', 'cohort', 'patient_exam', 'image', 'contrast',\n",
+       "       'contrast_label'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# df.loc[df.patient_id == 'TCGA-DU-7294']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1323,7 +1357,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1332,7 +1366,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1352,7 +1386,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -1365,13 +1399,22 @@
        "Name: plane, dtype: int64"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "df.plane.value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# df.contrast_label.value_counts()"
    ]
   },
   {
@@ -1383,7 +1426,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1396,7 +1439,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1412,7 +1455,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1421,7 +1464,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -1485,7 +1528,7 @@
        "      <td>07-02-2005-04728</td>\n",
        "      <td>1-3_PLANE_LOC-22369</td>\n",
        "      <td>0</td>\n",
-       "      <td>SCOUT</td>\n",
+       "      <td>LOCALIZER</td>\n",
        "      <td></td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
@@ -1526,7 +1569,7 @@
        "                                               image  contrast contrast_label  \\\n",
        "5                      9-AxT1-thin_for_surgery-27598         1            T1C   \n",
        "6  21-nordicICE_HFH_-_rBF_map_-Leakage_corrected-...         1            rBF   \n",
-       "7                                1-3_PLANE_LOC-22369         0          SCOUT   \n",
+       "7                                1-3_PLANE_LOC-22369         0      LOCALIZER   \n",
        "8                            5-AXIAL_DIFFUSION-62807         0            DWI   \n",
        "9                            8-AXIAL_PERFUSION-44568         1      PERFUSION   \n",
        "\n",
@@ -1538,7 +1581,7 @@
        "9    ax              1  "
       ]
      },
-     "execution_count": 30,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1549,16 +1592,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(5690, 8)"
+       "(5682, 8)"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1569,16 +1612,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'There are 274 patients that we can use and 461 unique exams.'"
+       "'There are 274 patients that we can use and 460 unique exams.'"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1596,7 +1639,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1641,7 +1684,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1657,7 +1700,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 47,
    "metadata": {
     "scrolled": true
    },
@@ -1985,7 +2028,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -1994,7 +2037,7 @@
        "(3630, 8)"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2005,7 +2048,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
@@ -2014,7 +2057,7 @@
        "'There are 274 patients that we can use and 274 unique exams.'"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2025,11 +2068,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
     "one_exam_per_pt_df.to_csv(Path(PATH, 'one_exam_per_patient_with_labels.csv'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# one_exam_per_pt_df.contrast_label.value_counts()"
    ]
   },
   {
@@ -2048,7 +2100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2057,7 +2109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -2121,7 +2173,7 @@
        "      <td>07-02-2005-04728</td>\n",
        "      <td>1-3_PLANE_LOC-22369</td>\n",
        "      <td>0</td>\n",
-       "      <td>SCOUT</td>\n",
+       "      <td>LOCALIZER</td>\n",
        "      <td>NaN</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
@@ -2341,7 +2393,7 @@
        "      <td>02-11-2005-83875</td>\n",
        "      <td>1-3_PLANE_LOC-11670</td>\n",
        "      <td>0</td>\n",
-       "      <td>SCOUT</td>\n",
+       "      <td>LOCALIZER</td>\n",
        "      <td>NaN</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
@@ -2561,7 +2613,7 @@
        "      <td>05-21-1992-MRI_BRAIN_WWO_CONTRAST-42529</td>\n",
        "      <td>1-3_PLANE_LOC-57443</td>\n",
        "      <td>0</td>\n",
-       "      <td>SCOUT</td>\n",
+       "      <td>LOCALIZER</td>\n",
        "      <td>NaN</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
@@ -2898,7 +2950,7 @@
        "     contrast_label plane  exam_eligible  \n",
        "5               T1C    ax              1  \n",
        "6               rBF   cor              1  \n",
-       "7             SCOUT   NaN              1  \n",
+       "7         LOCALIZER   NaN              1  \n",
        "8               DWI    ax              1  \n",
        "9         PERFUSION    ax              1  \n",
        "10         T2_FLAIR    ax              1  \n",
@@ -2918,7 +2970,7 @@
        "56              DTI   NaN              1  \n",
        "57              T1C   cor              1  \n",
        "58               T2    ax              1  \n",
-       "59            SCOUT   NaN              1  \n",
+       "59        LOCALIZER   NaN              1  \n",
        "60               T1    ax              1  \n",
        "61              rBF   cor              1  \n",
        "62        PERFUSION    ax              1  \n",
@@ -2938,7 +2990,7 @@
        "7424            DTI    ax              1  \n",
        "7425      PERFUSION    ax              1  \n",
        "7426             T2    ax              1  \n",
-       "7427          SCOUT   NaN              1  \n",
+       "7427      LOCALIZER   NaN              1  \n",
        "7428             T2   NaN              1  \n",
        "7429             T1    ax              1  \n",
        "7430       T2_FLAIR    ax              1  \n",
@@ -2961,7 +3013,7 @@
        "[3630 rows x 8 columns]"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2972,7 +3024,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2981,7 +3033,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2990,7 +3042,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3019,7 +3071,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -4780,13 +4832,7 @@
       "4337\n",
       "4338\n",
       "4339\n",
-      "4340\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "4340\n",
       "4383\n",
       "4384\n",
       "4385\n",
@@ -4901,7 +4947,13 @@
       "4613\n",
       "4614\n",
       "4615\n",
-      "4616\n",
+      "4616\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "4617\n",
       "4618\n",
       "4619\n",
@@ -6485,13 +6537,7 @@
       "7235\n",
       "7236\n",
       "7238\n",
-      "7239\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "7239\n",
       "7240\n",
       "7241\n",
       "7242\n",
@@ -6550,7 +6596,13 @@
       "7301\n",
       "7302\n",
       "7303\n",
-      "7304\n",
+      "7304\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "7305\n",
       "7306\n",
       "7307\n",
@@ -6687,7 +6739,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -6754,7 +6806,7 @@
        "      <td>07-02-2005-04728</td>\n",
        "      <td>1-3_PLANE_LOC-22369</td>\n",
        "      <td>0</td>\n",
-       "      <td>SCOUT</td>\n",
+       "      <td>LOCALIZER</td>\n",
        "      <td>NaN</td>\n",
        "      <td>1</td>\n",
        "      <td>4-AxFLAIR-thin_for_surgery-47036</td>\n",
@@ -6798,7 +6850,7 @@
        "                                               image  contrast contrast_label  \\\n",
        "5                      9-AxT1-thin_for_surgery-27598         1            T1C   \n",
        "6  21-nordicICE_HFH_-_rBF_map_-Leakage_corrected-...         1            rBF   \n",
-       "7                                1-3_PLANE_LOC-22369         0          SCOUT   \n",
+       "7                                1-3_PLANE_LOC-22369         0      LOCALIZER   \n",
        "8                            5-AXIAL_DIFFUSION-62807         0            DWI   \n",
        "9                            8-AXIAL_PERFUSION-44568         1      PERFUSION   \n",
        "\n",
@@ -6810,7 +6862,7 @@
        "9    ax              1  4-AxFLAIR-thin_for_surgery-47036  "
       ]
      },
-     "execution_count": 55,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -6821,7 +6873,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
