--- a/code_updated/04_mapping_segmentations_to_patientID_VisuallyVerify.ipynb
+++ b/code_updated/04_mapping_segmentations_to_patientID_VisuallyVerify.ipynb
@@ -2,9 +2,24 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/working/lupolab/julia/anaconda/envs/pytnew/lib/python3.7/site-packages/dicom/__init__.py:53: UserWarning: \n",
+      "This code is using an older version of pydicom, which is no longer \n",
+      "maintained as of Jan 2017.  You can access the new pydicom features and API \n",
+      "by installing `pydicom` from PyPI.\n",
+      "See 'Transitioning to pydicom 1.x' section at pydicom.readthedocs.org \n",
+      "for more information.\n",
+      "\n",
+      "  warnings.warn(msg)\n"
+     ]
+    }
+   ],
    "source": [
     "import os \n",
     "import glob\n",
@@ -31,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1398,6 +1413,244 @@
    "source": [
     "os.listdir(PATH)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Going to write a script for creating brainmasks for the FLAIRs that have a segmentation: "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "seg_df = pd.read_csv(Path(PATH, 'segmentation_df.csv'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>patient_id</th>\n",
+       "      <th>seg_loc</th>\n",
+       "      <th>seg_file</th>\n",
+       "      <th>cohort</th>\n",
+       "      <th>patient_exam</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>TCGA-06-0240</td>\n",
+       "      <td>/working/lupolab/julia/tcia_analysis/nvidia/ev...</td>\n",
+       "      <td>4-AxFLAIR-thin_for_surgery-47036_TC.nii.gz</td>\n",
+       "      <td>TCGA-GBM</td>\n",
+       "      <td>07-02-2005-04728</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>TCGA-06-0143</td>\n",
+       "      <td>/working/lupolab/julia/tcia_analysis/nvidia/ev...</td>\n",
+       "      <td>6-AXIAL_FLAIR-72192_TC.nii.gz</td>\n",
+       "      <td>TCGA-GBM</td>\n",
+       "      <td>02-11-2005-83875</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>TCGA-06-0149</td>\n",
+       "      <td>/working/lupolab/julia/tcia_analysis/nvidia/ev...</td>\n",
+       "      <td>5-AXIAL_T2_FLAIR-94682_TC.nii.gz</td>\n",
+       "      <td>TCGA-GBM</td>\n",
+       "      <td>03-25-2003-87536</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>TCGA-19-0955</td>\n",
+       "      <td>/working/lupolab/julia/tcia_analysis/nvidia/ev...</td>\n",
+       "      <td>3-MRHG_FLAIR_AX-38966_TC.nii.gz</td>\n",
+       "      <td>TCGA-GBM</td>\n",
+       "      <td>04-07-2001-NR_MRI_BRAIN_WWO-83151</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>TCGA-06-0648</td>\n",
+       "      <td>/working/lupolab/julia/tcia_analysis/nvidia/ev...</td>\n",
+       "      <td>6-AXIAL_FLAIR-80030_TC.nii.gz</td>\n",
+       "      <td>TCGA-GBM</td>\n",
+       "      <td>01-20-2006-51419</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     patient_id                                            seg_loc  \\\n",
+       "0  TCGA-06-0240  /working/lupolab/julia/tcia_analysis/nvidia/ev...   \n",
+       "1  TCGA-06-0143  /working/lupolab/julia/tcia_analysis/nvidia/ev...   \n",
+       "2  TCGA-06-0149  /working/lupolab/julia/tcia_analysis/nvidia/ev...   \n",
+       "3  TCGA-19-0955  /working/lupolab/julia/tcia_analysis/nvidia/ev...   \n",
+       "4  TCGA-06-0648  /working/lupolab/julia/tcia_analysis/nvidia/ev...   \n",
+       "\n",
+       "                                     seg_file    cohort  \\\n",
+       "0  4-AxFLAIR-thin_for_surgery-47036_TC.nii.gz  TCGA-GBM   \n",
+       "1               6-AXIAL_FLAIR-72192_TC.nii.gz  TCGA-GBM   \n",
+       "2            5-AXIAL_T2_FLAIR-94682_TC.nii.gz  TCGA-GBM   \n",
+       "3             3-MRHG_FLAIR_AX-38966_TC.nii.gz  TCGA-GBM   \n",
+       "4               6-AXIAL_FLAIR-80030_TC.nii.gz  TCGA-GBM   \n",
+       "\n",
+       "                        patient_exam  \n",
+       "0                   07-02-2005-04728  \n",
+       "1                   02-11-2005-83875  \n",
+       "2                   03-25-2003-87536  \n",
+       "3  04-07-2001-NR_MRI_BRAIN_WWO-83151  \n",
+       "4                   01-20-2006-51419  "
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "seg_df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = pd.read_csv(Path(PATH, 'one_exam_per_patient_with_fixed_vol.csv'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = df.loc[df.patient_id.isin(list(seg_df.patient_id))]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = df.drop_duplicates(subset = ['patient_id'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(224, 9)"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "PosixPath('/working/lupolab/julia/tcia_analysis')"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "PATH.parent"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "commands = []\n",
+    "for idx, row in df.iterrows(): \n",
+    "    path_to_exam = Path(PATH, row['cohort']+'-nifti', row['patient_id'], row['patient_exam'])\n",
+    "    command = 'bet '+ str(Path(path_to_exam,row['fixed_vol']+'a.nii.gz'))+' '+str(Path(path_to_exam,row['fixed_vol']+'_stripped.nii.gz'))+' -m'\n",
+    "    commands.append(command)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x = open(Path(PATH.parent, 'code', 'create_masks.txt'), 'w')\n",
+    "x.write('{')\n",
+    "x.write('\\n')\n",
+    "for command in commands: \n",
+    "    x.write(command)\n",
+    "    x.write('\\n')\n",
+    "x.write('}')\n",
+    "x.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# !grid_pipeline --scriptonly register_niftis.txt -- don't use, not in the right place, just to remember the command"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
